# python-project-52

./: Makefile  README.md  manage.py  pyproject.toml  requirements.txt
coverage/: codeclimate.json
hexlet_code/task_manager/: admin.py  forms.py  settings.py  urls.py  views.py  wsgi.py
hexlet_code/task_manager/labels/: apps.py  tests.py  urls.py  views.py
hexlet_code/task_manager/migrations/: 0001_initial.py  0002_status.py  0003_status_created_at.py
hexlet_code/task_manager/statuses/: apps.py  models.py  tests.py  urls.py  views.py
hexlet_code/task_manager/tasks/: apps.py  models.py  tests.py  (+2 more)
task_manager/: .env  filters.py  forms.py  models.py  settings.py  tests.py  urls.py  views.py
task_manager/labels/: apps.py  models.py  tests.py  urls.py  views.py
task_manager/migrations/: 0004_task.py  0005_alter_task_creator_alter_task_description_and_more.py  0006_label_remove_task_labels_task_labels.py  0007_remove_task_labels_remove_task_status_and_more.py
task_manager/statuses/: apps.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/: apps.py  filters.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: confirm_delete.html  flash.html  index.html  label_create.html  label_delete.html  label_update.html  labels.html  login.html  navbar.html  status_create.html  status_delete.html  status_update.html  statuses.html  task_card.html  tasks.html  tasks_create.html  tasks_delete.html  tasks_update.html  update.html  user_create.html  users.html
task_manager/users/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
(+29 files in other folders)
