[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
packages = [{ include = "hexlet_code" }]
description = ""
authors = ["danlo <danlo12@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
djangorestframework = "^3.15.2"
psycopg2 = "^2.9.9"
pillow = "^10.4.0"
gunicorn = "^23.0.0"
django-cors-headers = "^4.4.0"
whitenoise = "^6.7.0"
python-dotenv = "^1.0.1"
dj-database-url = "^2.2.0"
django-bootstrap5 = "^24.3"
django-filter = "^24.3"
rollbar = "^1.1.0"


[tool.ruff]
src = ["."]
line-length = 300

[tool.ruff.lint]
select = ['E', 'W', 'I', 'C90']


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
